--- a/kubernetes_deployment.yml.template
+++ b/kubernetes_deployment.yml.template
@@ -28,4 +28,4 @@ spec:
           containerPort: 8080
           protocol: TCP
       imagePullSecrets:
-        - name: regsecret
+        - name: werckerdemos
