--- a/wercker.yml
+++ b/wercker.yml
@@ -4,11 +4,7 @@ build:
     box: python:2.7
     steps:
 
-    - create-file:
-        name: Create a message file.
-        filename: hello/message.cfg
-        overwrite: true
-        content: Hi!
+    # file
 
     # Check that our application's tests are passing. Since this is a python
     # application, our entry script will also install the application's dependencies
