--- a/wercker.yml
+++ b/wercker.yml
@@ -3,7 +3,11 @@ build:
     box: python:2.7
     steps:
 
-    #
+    - create-file:
+        name: Create a message file.
+        filename: hello/message.cfg
+        overwrite: true
+        content: Hi!
 
     # Check that our application's tests are passing. Since this is a python
     # application, our entry script will also install the application's dependencies
