--- a/wercker.yml
+++ b/wercker.yml
@@ -4,7 +4,11 @@ build:
     box: python:2.7
     steps:
 
-    #
+    - create-file:
+        name: Create a message file.
+        filename: hello/message.cfg
+        overwrite: true
+        content: Hi! This message will be written to the message config file!
 
     # Check that our application's tests are passing. Since this is a python
     # application, our entry script will also install the application's dependencies
